--- a/client/src/pages/signup.css
+++ b/client/src/pages/signup.css
@@ -26,7 +26,8 @@
 /* Center inputs and submit button */
 .login input[type="email"],
 .login input[type="password"],
-.login input[type="submit"] {
+.login input[type="submit"],
+.login input[type="text"] {  /* Include type="text" to apply the same styles */
   width: calc(100% - 40px); /* Set inputs and submit button to fill the width of the form minus some padding */
   margin-bottom: 10px; /* Add some space between inputs and submit button */
 }
