--- a/client/src/pages/mappage.css
+++ b/client/src/pages/mappage.css
@@ -2,21 +2,21 @@
 header,
 main {
   display: flex;
-  justify-content: center; /* Center items horizontally */
-  align-items: center; /* Center items vertically */
-  flex-direction: column; /* Align items vertically */
+  justify-content: center; 
+  align-items: center; 
+  flex-direction: column; 
 }
 
 /* Style for the search bar */
 .searchBar input[type="search"] {
-  width: 300px; /* Set width of search input */
-  padding: 10px; /* Adjust padding for better appearance */
+  width: 300px; 
+  padding: 10px; 
 }
 
 /* Style for the map container */
 .map-container {
-  margin-top: 20px; /* Add some space between the search bar and map container */
+  margin-top: 20px; 
   margin-right: 475px;
   display: flex;
-  justify-content: center; /* Center map container horizontally */
+  justify-content: center; 
 }
