--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -1,7 +1,6 @@
 .container {
-    display: flex;
-    margin: 0;
-    padding: 0;
+    width: 100%;
+    max-width: 100vw;
 }
 
 .centered-content {
