--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -1,6 +1,9 @@
 .container {
+    display: flex;
     width: 100%;
     max-width: 100vw;
+    margin: 0;
+    padding: 0;
 }
 
 .centered-content {
@@ -36,7 +39,6 @@
 .carousel-container {
     position: relative;
     overflow: hidden;
-    /* Prevents any overflow from the carousel */
 }
 
 .hotel-carousel {
@@ -53,7 +55,6 @@
     border-radius: 8px;
     overflow: hidden;
     background-color: white;
-    /* Set background color to white */
 }
 
 .hotel-card img {
