--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -1,9 +1,20 @@
-.container {
-    display: flex;
-    width: 100%;
-    max-width: 100vw;
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    width: 100%;
+    overflow-x: hidden;
+}
+
+.container {
+    width: 100%;
+    max-width: 100vw;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
 .centered-content {
