--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -17,6 +17,11 @@ body {
     padding: 0 15px;
 }
 
+.h1-style {
+    margin: 0 auto;
+    padding: 0;
+}
+
 .centered-content {
     display: flex;
     flex-wrap: wrap;
