--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -1,27 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html,
-body {
-    width: 100%;
-    overflow-x: hidden;
-}
-
-.container {
-    width: 100%;
-    max-width: 100vw;
-    margin: 0 auto;
-    padding: 0;
-}
-
-.h1-style {
-    margin: 0 auto;
-    padding: 0;
-}
-
 .centered-content {
     display: flex;
     flex-wrap: wrap;
@@ -89,8 +65,7 @@ body {
     margin-top: 20px;
 }
 
-.carousel-controls button,
-.carousel-controls-button {
+.carousel-controls button .carousel-controls-button {
     padding: 10px 20px;
     margin: 0 10px;
     background-color: #007bff;
