--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -86,16 +86,18 @@ html {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    /* Prevent horizontal scrollbar */
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     max-width: 100vw;
-    /* Ensure container doesn't exceed viewport width */
-    padding: 0 15px;
-    /* Add some padding for better appearance */
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    /* Ensure padding and border are included in element's total width and height */
 }
 
 .centered-content {
@@ -104,14 +106,17 @@ html {
     justify-content: center;
     align-items: center;
     max-width: 100%;
-    /* Ensure content doesn't exceed container width */
     overflow: hidden;
-    /* Prevent overflow within centered-content */
+    padding: 0 20px;
 }
 
 .image-container {
     margin: 10px;
     animation: fade 8s infinite;
+}
+
+.h1-style {
+    margin-top: 20px;
 }
 
 .carousel-container {
@@ -124,9 +129,7 @@ html {
     justify-content: center;
     flex-wrap: wrap;
     max-width: 100%;
-    /* Ensure content doesn't exceed container width */
     overflow: hidden;
-    /* Prevent overflow within hotel-carousel */
 }
 
 .hotel-card {
