Attempting to redunce margin between navbar and header

--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -35,3 +35,14 @@
     border: none;
     cursor: pointer;
 }
+
+/* Testing below */
+Nav {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.h1-style {
+    margin-top: 0;
+}
