--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -81,11 +81,16 @@
     cursor: default;
 } */
 
-body,
-html {
+body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+}
+
+Nav {
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 .container {
@@ -97,7 +102,6 @@ html {
     max-width: 100vw;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 .centered-content {
@@ -105,9 +109,6 @@ html {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    max-width: 100%;
-    overflow: hidden;
-    padding: 0 20px;
 }
 
 .image-container {
@@ -168,4 +169,22 @@ html {
 .carousel-controls button:disabled {
     background-color: #ccc;
     cursor: default;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+
+    25% {
+        opacity: 1;
+    }
+
+    75% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
