--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -38,6 +38,9 @@
 
 /* Testing below */
 Nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0;
     width: 100%;
