--- a/client/src/pages/index.css
+++ b/client/src/pages/index.css
@@ -88,6 +88,9 @@ body {
 }
 
 Nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 0;
     padding: 0;
     width: 100%;
