Added .NavMenu CSS styling

--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -38,9 +38,21 @@
 
 /* Testing below */
 Nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0;
     width: 100%;
+}
+
+.NavMenu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    padding: 0 20px;
 }
 
 .h1-style {
