--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -1,4 +1,3 @@
-/* Testing below */
 Nav {
     display: flex;
     justify-content: center;
@@ -21,8 +20,6 @@ Nav {
     margin-top: 0;
     text-align: center;
 }
-
-/* End Test */
 
 .dropdown {
     position: relative;
@@ -52,6 +49,29 @@ Nav {
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+/* Testing below */
+.dropdown-btn {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background: none;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+}
+
+.dropdown-btn:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* End Test */
 
 .dropbtn {
     background-color: #4CAF50;
