--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -40,6 +40,10 @@ Nav {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+
+    /* Testing */
+    font-size: 16px;
+    font-family: inherit;
 }
 
 .dropdown-content a:hover {
@@ -61,6 +65,10 @@ Nav {
     cursor: pointer;
     width: 100%;
     text-align: left;
+
+    /* Testing */
+    font-size: 16px;
+    font-family: inherit;
 }
 
 .dropdown-btn:hover {
