--- a/client/src/pages/signup.css
+++ b/client/src/pages/signup.css
@@ -3,9 +3,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 85px; /* Set the top margin to the height of the Navbar */
-  flex-direction: column; /* Align items vertically */
+  flex-direction: column;
+  /* Align items vertically */
 }
+
+/* margin-top: 85px; Set the top margin to the height of the Navbar */
 
 /* .login is where users will input account information */
 .login {
@@ -19,22 +21,29 @@
 /* Stack inputs on top of each other */
 .login label,
 .login input {
-  display: block; /* Set inputs and labels to display block */
-  margin-bottom: 10px; /* Add some space between inputs */
+  display: block;
+  /* Set inputs and labels to display block */
+  margin-bottom: 10px;
+  /* Add some space between inputs */
 }
 
 /* Center inputs and submit button */
 .login input[type="email"],
 .login input[type="password"],
 .login input[type="submit"],
-.login input[type="text"] {  /* Include type="text" to apply the same styles */
-  width: calc(100% - 40px); /* Set inputs and submit button to fill the width of the form minus some padding */
-  margin-bottom: 10px; /* Add some space between inputs and submit button */
+.login input[type="text"] {
+  /* Include type="text" to apply the same styles */
+  width: calc(100% - 40px);
+  /* Set inputs and submit button to fill the width of the form minus some padding */
+  margin-bottom: 10px;
+  /* Add some space between inputs and submit button */
 }
 
 input[type="submit"] {
-  background-color: skyblue; /* Set background color for submit button */
-  padding: 10px; /* Adjust padding for better appearance */
+  background-color: skyblue;
+  /* Set background color for submit button */
+  padding: 10px;
+  /* Adjust padding for better appearance */
   cursor: pointer;
   border-radius: 10px;
 }
