--- a/client/src/pages/about.css
+++ b/client/src/pages/about.css
@@ -1,5 +1,7 @@
 .about-container {
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   height: 100vh;
   text-align: center;
